--- a/index.html
+++ b/index.html
@@ -27,19 +27,21 @@
         </a>
       </div>
       <section class="tech-info">
-        <h2>Behind The Scenes</h2>
+        <h2>Technical Highlights</h2>
         <p>
-          Built with determination by students of
+          A collaborative endeavor by the dedicated students of
           <span>Helsinki Business College .NET23KA</span>.
         </p>
         <p>
-          Crafted with the art of <span>HTML</span>, the styling magic of
-          <span>CSS</span>, and the interactivity of <span>JavaScript</span>.
+          Designed using the robust structure of <span>HTML</span>, enhanced
+          with the aesthetic appeal of <span>CSS</span>, and brought to life
+          with the dynamic capabilities of <span>JavaScript</span>.
         </p>
-        <p>Hosted seamlessly on <span>Azure</span>.</p>
+        <p>Efficiently hosted on the cloud via <span>Azure</span>.</p>
 
         <p>
-          <span>Matti</span>, <span>Marcus</span>, and <span>Tatiana</span>.
+          Spearheaded by <span>Matti</span>, <span>Tatiana</span>, and
+          <span>Marcus</span>.
         </p>
       </section>
     </div>
