--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
       </section>
       <div class="demo-button-container">
-        <a href="https://kind-dune-0a1a0f203.3.azurestaticapps.net/">
+        <a href="https://polite-water-08ed99503.3.azurestaticapps.net/">
           <button class="demo-button">Enter the Demo</button>
         </a>
       </div>
@@ -32,13 +32,14 @@
           A collaborative endeavor by the dedicated students of
           <span>Helsinki Business College .NET23KA</span>.
         </p>
+
         <p>
-          Designed using the robust structure of <span>HTML</span>, enhanced
-          with the aesthetic appeal of <span>CSS</span>, and brought to life
-          with the dynamic capabilities of <span>JavaScript</span>.
+          The interactive UI components were crafted with <span>React</span>, a
+          modern JavaScript library for building user interfaces. This choice
+          ensured a seamless user experience and efficient performance, making
+          the application both responsive and dynamic.
         </p>
         <p>Efficiently hosted on the cloud via <span>Azure</span>.</p>
-
         <p>
           Spearheaded by <span>Matti</span>, <span>Tatiana</span>, and
           <span>Marcus</span>.
